--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,13 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.9</version>
 		</dependency>
-		
-  </dependencies>
+
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency>
+
+</dependencies>
   
   
   <parent>
